objects/Cross_Sell_Recommendations__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Recommended_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Product_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Product Parent</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cross-Sell Products Recommendations</relationshipLabel>
        <relationshipName>ProductsRecommandation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Recommended as Cross-Sell For</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>unique_ID_value__c</fullName>
        <label>unique ID value</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cross-Sell Recommendation</label>
    <language>en_US</language>
    <nameField>
        <displayFormat>Recommendation-{0000}</displayFormat>
        <label>Cross-Sell Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross-SellRecommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>impossible_recommendation_on_itself</fullName>
        <active>true</active>
        <errorConditionFormula>Recommended_Product__c  =  Recommended_Product_Parent__c</errorConditionFormula>
        <errorMessage>Cannot have the product as part of its own recommendation</errorMessage>
    </validationRules>
</CustomObject>